feat(assembly-ui): added testimony functionnality

--- a/apps/assembly-ui/trackingConfiguration.yaml
+++ b/apps/assembly-ui/trackingConfiguration.yaml
@@ -3,102 +3,102 @@
 #  parameters: []
 
 TWITTER_MAPPING:
-  display-page: "ojv3t"
-  action-main: "ok9jh"
+  display-page: 'ojv3t'
+  action-main: 'ok9jh'
 
 RECIPIENTS:
-  facebook: ["acquisition"]
-  twitter: ["acquisition"]
-  mixpanel: ["product"]
-  makeorg: ["business"]
+  facebook: ['acquisition']
+  twitter: ['acquisition']
+  mixpanel: ['product']
+  makeorg: ['business']
 
 EVENTS:
   DISPLAY-PAGE:
     key: display-page
     description: Display of a page
     recipients:
-      ["product", "business", "acquisition"]
+      ['product', 'business', 'acquisition']
       #purpose: Adoption - DAU measurement (daily active users)
     parameters:
       - key: event_slug
         description: The event slug
         purpose: Subject segmentation - service improvement
         example: convention-fin-de-vie
-        recipients: ["product"]
+        recipients: ['product']
       - key: page
         description: Page name
         example: event-page
         purpose: Measuring the number of visitors to a page - service improvement
-        recipients: ["product"]
+        recipients: ['product']
       - key: language
         description: Interface language
         purpose: Language segmentation - service improvement
         recipients:
-          ["product"]
+          ['product']
           # purpose: Engagement mesurement (by visitors, session)
       - key: assembly_event_id
         description: The event identifier
         purpose: Engagement by event
         example: 00000000-0000-0000-0000-000000000000
-        recipients: ["business"]
+        recipients: ['business']
       - key: visitor_id
         description: Unique visitor identifier
         purpose: Segmentation by unique visitor
         example: 00000000-0000-0000-0000-000000000000
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
       - key: session_id
         description: Session identifier
         purpose: Segmentation by session
         example: 00000000-0000-0000-0000-000000000000
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
         # purpose: Visitors, visits by utms
       - key: utm_campaign
         description: Identifies a specific product promotion or strategic campaign
         purpose: Acquisition campaign follow-up
         example: convention_france
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
       - key: utm_source
         description: Identifies which site sent the traffic, and is a required parameter.
         purpose: Acquisition campaign follow-up
         example: google
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
       - key: utm_term
         description: Identifies search terms
         purpose: Acquisition campaign follow-up
         example: running+shoes
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
       - key: utm_content
         description: Identifies what specifically was clicked to bring the user to the site, such as a banner ad or a text link. It is often used for A/B testing and content-targeted ads.
         purpose: Acquisition campaign follow-up
         example: logolink
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
 
   ACTION-MAIN:
     key: action-main
     description: Event triggered when the user interract with the main features (themes, suggestions or open prompt)
-    recipients: ["product", "business", "acquisition"]
+    recipients: ['product', 'business', 'acquisition']
     parameters:
       - key: visitor_id
         description: Unique visitor identifier
         purpose: Segmentation by unique visitor
         example: 00000000-0000-0000-0000-000000000000
         optional: true
-        recipients: ["product", "business"]
+        recipients: ['product', 'business']
       - key: language
         description: Interface language
         purpose: Language segmentation - service improvement
-        recipients: ["product"]
+        recipients: ['product']
       - key: event_slug
         description: The event slug
         purpose: Subject segmentation - service improvement
         example: convention-fin-de-vie
-        recipients: ["product"]
+        recipients: ['product']
       - key: trigger
         description: Trigger fired by the user (themes, suggestions or open prompt)
         values:
@@ -106,86 +106,86 @@ EVENTS:
           - 'suggestion'
           - 'theme'
         purpose: Usage of the feature - service improvement
-        recipients: ["product"]
+        recipients: ['product']
       - key: theme_label
         description: Label of thematic CTA
         purpose: Relevance of themes - service improvement
         example: my thematic label
         optional: true
-        recipients: ["product"]
+        recipients: ['product']
       - key: suggestion_label
         description: Label of suggestion CTA
         purpose: Relevance of suggestions - service improvement
         example: my suggestion label
         optional: true
-        recipients: ["product"]
+        recipients: ['product']
       - key: submit_id
         description: LLM submission identifier
         purpose: Identifying the route - service improvement
         example: 00000000-0000-0000-0000-000000000000
         optional: true
-        recipients: ["product"]
+        recipients: ['product']
       - key: session_id
         description: Session identifier
         purpose: Segmentation by session
         example: 00000000-0000-0000-0000-000000000000
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
       - key: assembly_event_id
         description: The event identifier
         purpose: Data for control purpose
         example: 00000000-0000-0000-0000-000000000000
-        recipients: ["business"]
+        recipients: ['business']
       - key: utm_campaign
         description: Identifies a specific product promotion or strategic campaign
         purpose: Acquisition campaign follow-up
         example: convention_france
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
       - key: utm_source
         description: Identifies which site sent the traffic, and is a required parameter.
         purpose: Acquisition campaign follow-up
         example: google
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
       - key: utm_term
         description: Identifies search terms
         purpose: Acquisition campaign follow-up
         example: running+shoes
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
       - key: utm_content
         description: Identifies what specifically was clicked to bring the user to the site, such as a banner ad or a text link. It is often used for A/B testing and content-targeted ads.
         purpose: Acquisition campaign follow-up
         example: logolink
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
 
   ACTION-SOURCE-LINK:
     key: action-source-link
     description: Click on a media source link
-    recipients: ["product", "business"]
+    recipients: ['product', 'business']
     parameters:
       - key: visitor_id
         description: Unique visitor identifier
         purpose: Segmentation by unique visitor
         example: 00000000-0000-0000-0000-000000000000
         optional: true
-        recipients: ["product", "business"]
+        recipients: ['product', 'business']
       - key: source_document_link
         description: Url of the document
         purpose: Documentary source identification - Service improvement
         example: https://example.com/dchKeOY7uFA?t=2850
-        recipients: ["product"]
+        recipients: ['product']
       - key: language
         description: Interface language
         purpose: Language segmentation - service improvement
-        recipients: ["product"]
+        recipients: ['product']
       - key: event_slug
         description: The event slug
         purpose: Subject segmentation - service improvement
         example: convention-fin-de-vie
-        recipients: ["product"]
+        recipients: ['product']
       - key: document_type
         description: Type of the document source
         purpose: Document source type segmentation - Service improvement
@@ -194,53 +194,53 @@ EVENTS:
           - AUDIO
           - VIDEO
           - PDF
-        recipients: ["product"]
+        recipients: ['product']
       - key: session_id
         description: Session identifier
         purpose: Segmentation by session
         example: 00000000-0000-0000-0000-000000000000
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
       - key: assembly_event_id
         description: The event identifier
         purpose: Data for control purpose
         example: 00000000-0000-0000-0000-000000000000
-        recipients: ["business"]
+        recipients: ['business']
       - key: utm_campaign
         description: Identifies a specific product promotion or strategic campaign
         purpose: Acquisition campaign follow-up
         example: convention_france
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
       - key: utm_source
         description: Identifies which site sent the traffic, and is a required parameter.
         purpose: Acquisition campaign follow-up
         example: google
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
       - key: utm_term
         description: Identifies search terms
         purpose: Acquisition campaign follow-up
         example: running+shoes
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
       - key: utm_content
         description: Identifies what specifically was clicked to bring the user to the site, such as a banner ad or a text link. It is often used for A/B testing and content-targeted ads.
         purpose: Acquisition campaign follow-up
         example: logolink
         optional: true
-        recipients: ["business"]
+        recipients: ['business']
 
   DISPLAY-PROMPT-ANSWER:
     key: display-prompt-answer
     description: Display of generated response (at end of stream)
-    recipients: ["product"]
+    recipients: ['product']
     parameters:
       - key: submit_id
         description: Prompt submission identifier
         purpose: Identifying the route - service improvement
         example: 00000000-0000-0000-0000-000000000000
-        recipients: ["product"]
+        recipients: ['product']
       - key: prompt_response_type
         description: Response is from cache
         purpose: Cache usage - service improvement
@@ -248,7 +248,7 @@ EVENTS:
           - cache
           - llm
         example: cache
-        recipients: ["product"]
+        recipients: ['product']
         optional: true
       - key: prompt_result_success
         description: Successful response
@@ -257,7 +257,7 @@ EVENTS:
         values:
           - success
           - fail
-        recipients: ["product"]
+        recipients: ['product']
       - key: prompt_fired_by
         description: Response trigger
         purpose: Understanding what our users do after generation
@@ -265,19 +265,19 @@ EVENTS:
         values:
           - main
           - document
-        recipients: ["product"]
+        recipients: ['product']
 
   ACTION-QUIT-ONBOARDING:
     key: action-quit-onboarding
     description: CTA close onboarding popin
-    recipients: ["product"]
+    recipients: ['product']
     parameters:
       - key: visitor_id
         description: Unique visitor identifier
         purpose: Segmentation by unique visitor
         example: 00000000-0000-0000-0000-000000000000
         optional: true
-        recipients: ["product"]
+        recipients: ['product']
       - key: modal_action_type
         description: Which button is used to close the popin
         purpose: Modal button usage
@@ -285,58 +285,100 @@ EVENTS:
         values:
           - discover
           - close
-        recipients: ["product"]
+        recipients: ['product']
       - key: event_slug
         description: The event slug
         purpose: Subject segmentation - service improvement
         example: convention-fin-de-vie
-        recipients: ["product"]
+        recipients: ['product']
 
   ACTION-DOCUMENT:
     key: action-document
     description: CTA to get an answer from document database
-    recipients: ["product"]
+    recipients: ['product']
     parameters:
       - key: visitor_id
         description: Unique visitor identifier
         purpose: Segmentation by unique visitor
         example: 00000000-0000-0000-0000-000000000000
         optional: true
-        recipients: ["product"]
+        recipients: ['product']
       - key: event_slug
         description: The event slug
         purpose: Subject segmentation - service improvement
         example: convention-fin-de-vie
-        recipients: ["product"]
+        recipients: ['product']
       - key: submit_id
         description: LLM submission identifier
         purpose: Identifying the route - service improvement
         example: 00000000-0000-0000-0000-000000000000
-        recipients: ["product"]
+        recipients: ['product']
 
   ACTION-AUTO-PROMPT:
     key: action-auto-prompt
-    description: Auto prompt request (url param) 
-    recipients: ["product"]
+    description: Auto prompt request (url param)
+    recipients: ['product']
     parameters:
       - key: visitor_id
         description: Unique visitor identifier
         purpose: Segmentation by unique visitor
         example: 00000000-0000-0000-0000-000000000000
         optional: true
-        recipients: ["product"]
+        recipients: ['product']
       - key: event_slug
         description: The event slug
         purpose: Subject segmentation - service improvement
         example: convention-fin-de-vie
-        recipients: ["product"]
+        recipients: ['product']
       - key: submit_id
         description: LLM submission identifier
         purpose: Identifying the route - service improvement
         example: 00000000-0000-0000-0000-000000000000
-        recipients: ["product"]
+        recipients: ['product']
       - key: suggestion_label
         description: Label of suggestion CTA
         purpose: Relevance of suggestions - service improvement
         example: my suggestion label
-        recipients: ["product"]
+        recipients: ['product']
+
+  ACTION-CHECK-INTERACTION:
+    key: action-check-interaction
+    description: CTA open testimony block
+    recipients: ['product']
+    parameters:
+      - key: visitor_id
+        description: Unique visitor identifier
+        purpose: Segmentation by unique visitor
+        example: 00000000-0000-0000-0000-000000000000
+        optional: true
+        recipients: ['product']
+      - key: language
+        description: Interface language
+        purpose: Language segmentation - service improvement
+        recipients: ['product']
+      - key: event_slug
+        description: The event slug
+        purpose: Subject segmentation - service improvement
+        example: convention-fin-de-vie
+        recipients: ['product']
+
+  ACTION-SHARE-INTERACTION:
+    key: action-share-interaction
+    description: CTA share testimony in external form
+    recipients: ['product']
+    parameters:
+      - key: visitor_id
+        description: Unique visitor identifier
+        purpose: Segmentation by unique visitor
+        example: 00000000-0000-0000-0000-000000000000
+        optional: true
+        recipients: ['product']
+      - key: language
+        description: Interface language
+        purpose: Language segmentation - service improvement
+        recipients: ['product']
+      - key: event_slug
+        description: The event slug
+        purpose: Subject segmentation - service improvement
+        example: convention-fin-de-vie
+        recipients: ['product']
