--- a/package.json
+++ b/package.json
@@ -72,10 +72,10 @@
     "ts-jest": "27.1.5",
     "ts-node": "10.9.1",
     "ts-prune": "^0.10.3",
-    "ts-unused-exports": "^9.0.2",
-    "typescript": "~4.8.0"
+    "ts-unused-exports": "^9.0.2"
   },
   "dependencies": {
-    "@types/webpack-env": "^1.18.0"
+    "@types/webpack-env": "^1.18.0",
+    "typescript": "^4.9.5"
   }
 }
