--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "target": "ES2021",
     "sourceMap": true,
     "composite": true,
