feat(front): tracking added
closes: MP-3890

--- a/package/utils/services/trackingConfiguration.yaml
+++ b/package/utils/services/trackingConfiguration.yaml
@@ -729,3 +729,7 @@ REPORT_SOLUTION:
         - BadTranslation
         - IncorrectInformation
         - Offensive
+
+CLICK_DOWNLOAD_RESULT_REPORT:
+  key: click-download-result-report
+  description: download the result report
