--- a/apps/assembly-ui/trackingConfiguration.yaml
+++ b/apps/assembly-ui/trackingConfiguration.yaml
@@ -424,3 +424,25 @@ EVENTS:
         purpose: Subject segmentation - service improvement
         example: convention-fin-de-vie
         recipients: ['product']
+
+  ACTION-SEE-MORE:
+    key: action-see-more
+    description: CTA see more introduction
+    recipients: ['product']
+    parameters:
+      - key: visitor_id
+        description: Unique visitor identifier
+        purpose: Segmentation by unique visitor
+        example: 00000000-0000-0000-0000-000000000000
+        optional: true
+        recipients: ['product']
+      - key: event_slug
+        description: The event slug
+        purpose: Subject segmentation - service improvement
+        example: convention-fin-de-vie
+        recipients: ['product']
+      - key: expand
+        description: The content is expended
+        purpose: True or False
+        example: 'true'
+        recipients: ['product']
