feat(assembly-ui): added told
closes: MP-3898

--- a/apps/assembly-ui/.env.local
+++ b/apps/assembly-ui/.env.local
@@ -30,6 +30,9 @@ ASSEMBLY_URL_SERVER_SIDE=https://assembly.preprod.makeorg.tech
 # Mixpanel
 MIXPANEL_TOKEN=496b3fdae1ecf1dfaca4d71017cc0f16
 
+# Told
+TOLD_TOKEN=
+
 # Facebook
 FB_PIXEL_ID=3668534183427105
 FB_CONVERSION_TOKEN=
