--- a/apps/assembly-ui/package.json
+++ b/apps/assembly-ui/package.json
@@ -21,6 +21,7 @@
     "@make.org/ui": "0.1.0",
     "@make.org/utils": "0.1.0",
     "axios": "~0.26.1",
+    "can-ndjson-stream": "^1.0.2",
     "compression": "~1.7.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
