--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,190 +1,121 @@
-image: makeorg/docker-arch-docker:latest
+include:
+  - project: 'makeorg/infrastructure/pipeline/templates'
+    file: 'pipelines/monorepo.yml'
 
-variables: &global_variables
-  YARN_VERSION: '3.2.3'
-
-cache:
-  key: ${CI_COMMIT_REF_SLUG}
-  paths:
-    - ~/.cache
-    - node_modules
-
-.weblate-user: &weblate-user
-  variables:
-    - $GITLAB_USER_LOGIN == "weblate"
-
-enable_merge:
-  stage: weblate
-  only:
-    refs:
-      - merge_requests
-    <<: *weblate-user
-  script:
-    - echo "This is fine"
-
-.exclude-weblate: &exclude_weblate
-  except:
-    <<: *weblate-user
-
+# Stage
 stages:
-  - weblate
   - check
   - build
   - deploy
   - migrate
   - merge
 
-# Environments
-.preprod:
-  environment: preproduction
-  only:
-    refs:
-      - preproduction
+# Workflow
+workflow:
+  rules:
+    - !reference [.rules, on-merge-request]
+    - !reference [.rules, on-protected-branch]
 
-.prod:
-  environment: production
-  only:
-    refs:
-      - production
-  when: manual
-  allow_failure: false
-
-# Applications
-.front:
-  variables:
-    IMAGE_NAME: make-front
-    IMAGE_APP_TARGET: app-production
-    IMAGE_APP_PATH: apps/front/Dockerfile
-    RUNDECK_JOB_ID: $RUNDECK_FRONT_JOB_ID
-  only:
+# Rule
+.rules-apps:
+  on-assembly-ui-changes:
     changes:
       - .gitlab-ci.yml
       - package/**/*
-      - apps/front/**/*
-      - cypress/integration/*.feature
-      - cypress/integration/common/*.feature
-      - cypress/integration/front/*.feature
-      - cypress/support/**
       - package.json
       - yarn.lock
-
-.widget:
-  variables:
-    IMAGE_NAME: make-widget
-    IMAGE_APP_TARGET: widget-production
-    IMAGE_APP_PATH: apps/widget/Dockerfile
-    RUNDECK_JOB_ID: $RUNDECK_WIDGET_JOB_ID
-  only:
-    changes:
-      - .gitlab-ci.yml
-      - package/**/*
-      - apps/widget/**/*
-      - cypress/integration/*.feature
-      - cypress/integration/common/*.feature
-      - cypress/integration/widget/*.feature
-      - cypress/support/**
-      - package.json
-      - yarn.lock
-
-.assembly-ui:
-  variables:
-    IMAGE_NAME: assembly-ui
-    IMAGE_APP_TARGET: app-production
-    IMAGE_APP_PATH: apps/assembly-ui/Dockerfile
-    RUNDECK_JOB_ID: $RUNDECK_ASSEMBLY_UI_JOB_ID
-  only:
-    changes:
-      - .gitlab-ci.yml
-      - package/**/*
       - apps/assembly-ui/**/*
+    variables:
+      APP_NAME: assembly-ui
+      APP_WORKSPACE: '@make.org/assembly-ui'
+      APP_CYPRESS_TASK: ci:cypress:assembly-ui
+      IMAGE_NAME: $NEXUS_URL/assembly-ui
+      IMAGE_APP_TARGET: app-production
+      IMAGE_APP_PATH: apps/assembly-ui/Dockerfile
+      RUNDECK_JOB_ID: $RUNDECK_ASSEMBLY_UI_JOB_ID
+  on-front-changes:
+    changes:
+      - .gitlab-ci.yml
+      - package/**/*
       - package.json
       - yarn.lock
+      - apps/front/**/*
+      - cypress/integration/front/*.feature
+      - cypress/integration/common/*.feature
+      - cypress/integration/*.feature
+      - cypress/support/**
+    variables:
+      APP_NAME: make-front
+      APP_WORKSPACE: '@make.org/front'
+      APP_CYPRESS_TASK: ci:cypress:front
+      IMAGE_NAME: $NEXUS_URL/make-front
+      IMAGE_APP_TARGET: app-production
+      IMAGE_APP_PATH: apps/front/Dockerfile
+      RUNDECK_JOB_ID: $RUNDECK_FRONT_JOB_ID
+  on-widget-changes:
+    changes:
+      - .gitlab-ci.yml
+      - package/**/*
+      - package.json
+      - yarn.lock
+      - apps/widget/**/*
+      - cypress/integration/widget/*.feature
+      - cypress/integration/common/*.feature
+      - cypress/integration/*.feature
+      - cypress/support/**
+    variables:
+      APP_NAME: make-widget
+      APP_WORKSPACE: '@make.org/widget'
+      APP_CYPRESS_TASK: ci:cypress:widget
+      IMAGE_NAME: $NEXUS_URL/make-widget
+      IMAGE_APP_TARGET: widget-production
+      IMAGE_APP_PATH: apps/widget/Dockerfile
+      RUNDECK_JOB_ID: $RUNDECK_WIDGET_JOB_ID
 
-# Stages
+# Template
+.on-front-merge-request:
+  rules:
+    - !reference [.rules, never-on-protected-branch]
+    - !reference [.rules-apps, on-front-changes]
+.on-widget-merge-request:
+  rules:
+    - !reference [.rules, never-on-protected-branch]
+    - !reference [.rules-apps, on-widget-changes]
+.assembly-ui:
+  rules:
+    - !reference [.rules, never-if-environment-mismatch-branch]
+    - !reference [.rules-apps, on-assembly-ui-changes]
+.front:
+  rules:
+    - !reference [.rules, never-if-environment-mismatch-branch]
+    - !reference [.rules-apps, on-front-changes]
+.widget:
+  rules:
+    - !reference [.rules, never-if-environment-mismatch-branch]
+    - !reference [.rules-apps, on-widget-changes]
+
 .check:
   stage: check
-  only:
-    refs:
-      - preproduction
-      - merge_request
-  except:
-    refs:
-      - production
-  <<: *exclude_weblate
-  image: 'node:18.17-alpine'
+  extends: .on-merge-request
+  tags:
+    - large
+  variables:
+    YARN_VERSION: '3.2.3'
+  image: node:18.17-alpine
   before_script:
     - node -v
-    - export YARN_VERSION="$YARN_VERSION"
     - corepack enable yarn
     - corepack prepare
     - yarn install
-  cache: []
 
-.build:
-  stage: build
-  only:
-    refs:
-      - preproduction
-      - production
-      - merge_request
-  <<: *exclude_weblate
-  tags:
-    - docker
-  before_script:
-    - export IMAGE_VERSION=`git rev-parse --short=10 HEAD`
-    - mkdir -p /var/lib/docker
-    - mount -t tmpfs -o size=12G tmpfs /var/lib/docker
-    - if [ ! -e /var/run/docker.sock ]; then DOCKER_DRIVER=overlay2 dockerd & fi
-    - until docker ps; do echo "waiting for docker to be up..."; sleep 0.5; done
-    - docker login "https://$NEXUS_URL" --username "$NEXUS_USER" --password "$NEXUS_PASSWORD"
-  script:
-    - echo $(docker pull $NEXUS_URL/$IMAGE_NAME:$IMAGE_VERSION)
-    - >
-      if [[ -z $(docker images -q $NEXUS_URL/$IMAGE_NAME:$IMAGE_VERSION) ]];then
-        DOCKER_BUILDKIT=1 docker build --rm -f $IMAGE_APP_PATH -t $NEXUS_URL/$IMAGE_NAME:$IMAGE_VERSION --target $IMAGE_APP_TARGET .
-        docker push $NEXUS_URL/$IMAGE_NAME:$IMAGE_VERSION
-      fi
-    - docker tag $NEXUS_URL/$IMAGE_NAME:$IMAGE_VERSION $NEXUS_URL/$IMAGE_NAME:$CI_COMMIT_REF_NAME-latest
-    - docker push $NEXUS_URL/$IMAGE_NAME:$CI_COMMIT_REF_NAME-latest
-
-.deploy:
-  stage: deploy
-  script:
-    - >
-      job_id=$(curl -s -X "POST" \
-        -H "Accept: application/json" \
-        -H "Content-Type: application/x-www-form-urlencoded" \
-        -H "X-Rundeck-Auth-Token: ${RUNDECK_TOKEN}" \
-        --data-urlencode "argString=-version $CI_COMMIT_REF_NAME-latest" \
-        ${RUNDECK_URL}/api/16/job/${RUNDECK_JOB_ID}/run \
-        | jq -r '.id')
-
-      [[ "${job_id}" =~ ^[0-9]+$ ]] && echo "Job ${job_id} started ..." \
-      || { echo "Rundeck Job is not correctly launched"; exit 1; };
-
-      status='running';
-      while [[ "${status}" =~ ^(running|scheduled)$ ]]; do
-        status=$(curl -s -X "GET" \
-          -H "Accept: application/json" \
-          -H "Content-Type: application/x-www-form-urlencoded" \
-          -H "X-Rundeck-Auth-Token: ${RUNDECK_TOKEN}" \
-          ${RUNDECK_URL}/api/16/execution/${job_id} \
-          | jq -r '.status');
-        [[ "${status}" =~ ^(running|scheduled)$ ]] \
-        && { echo -e "Job ${job_id} is still running ... \nWaiting 5s ..."; sleep 5; };
-      done;
-
-      [ "${status}" != 'succeeded' ] && { echo -e "Job ${job_id} has ${status}."; exit 2; };
-      echo "Job ${job_id} has ${status}.";
-
-.migrate:
-  extends: .deploy
-  stage: migrate
-
-.e2e:
+.integration:
+  extends: .check
   image: cypress/browsers:node-18.16.0-chrome-114.0.5735.133-1-ff-114.0.2-edge-114.0.1823.51-1
   variables:
     CYPRESS_CACHE_FOLDER: '$CI_PROJECT_DIR/cache_cypress'
+  script:
+    - yarn workspace "$APP_WORKSPACE" build
+    - yarn "$APP_CYPRESS_TASK"
   artifacts:
     expire_in: 1 week
     when: always
@@ -224,25 +155,22 @@ jscpd:
     paths:
       - reports
 
-e2e-front:
+integration-front:
   extends:
-    - .check
-    - .e2e
-    - .front
-  script:
-    - yarn workspace @make.org/front build
-    - yarn ci:cypress:front
+    - .integration
+    - .on-front-merge-request
 
-e2e-widget:
+integration-widget:
   extends:
-    - .check
-    - .e2e
-    - .widget
-  script:
-    - yarn workspace @make.org/widget build
-    - yarn ci:cypress:widget
+    - .integration
+    - .on-widget-merge-request
 
 # Build
+build-make-assembly-ui:
+  extends:
+    - .build
+    - .assembly-ui
+
 build-make-front:
   extends:
     - .build
@@ -253,65 +181,43 @@ build-make-widget:
     - .build
     - .widget
 
-build-make-assembly-ui:
-  extends:
-    - .build
-    - .assembly-ui
-
 # Deploy
-deploy-front-preproduction:
+deploy-preproduction-assembly-ui:
   extends:
     - .deploy
-    - .front
     - .preprod
-
-deploy-widget-preproduction:
-  extends:
-    - .deploy
-    - .widget
-    - .preprod
-
-deploy-assembly-ui-preproduction:
-  extends:
-    - .deploy
     - .assembly-ui
+
+deploy-preproduction-front:
+  extends:
+    - .deploy
     - .preprod
-
-deploy-front-production:
-  extends:
-    - .deploy
     - .front
-    - .prod
 
-deploy-widget-production:
+deploy-preproduction-widget:
   extends:
     - .deploy
+    - .preprod
     - .widget
-    - .prod
 
-deploy-assembly-ui-production:
+deploy-production-assembly-ui:
   extends:
     - .deploy
-    - .assembly-ui
     - .prod
+    - .assembly-ui
 
+deploy-production-front:
+  extends:
+    - .deploy
+    - .prod
+    - .front
+
+deploy-production-widget:
+  extends:
+    - .deploy
+    - .prod
+    - .widget
+
+# Merge
 merge-to-prod:
-  stage: merge
-  when: manual
-  only:
-    - preproduction
-  allow_failure: false
-  script:
-    - mkdir -p ~/.ssh/
-    - chmod 700 ~/.ssh
-    - ssh-keyscan -t rsa gitlab.com > ~/.ssh/known_hosts
-    - echo "${DEPLOY_PRIVATE_KEY}" > ~/.ssh/id_rsa
-    - chmod 600 ~/.ssh/id_rsa
-    - export CI_PUSH_REPO=`echo $CI_REPOSITORY_URL | perl -pe 's#.*@(.+?(\:\d+)?)/#git@\1:#'`
-    - echo "Target repo is ${CI_PUSH_REPO}"
-    - git config --global user.email "${GITLAB_USER_EMAIL}"
-    - git config --global user.name "${GITLAB_USER_NAME}"
-    - git remote set-url origin "${CI_PUSH_REPO}"
-    - git checkout production
-    - git merge --ff-only origin/preproduction
-    - git push origin production:production
+  extends: .merge
