--- a/apps/assembly-ui/package.json
+++ b/apps/assembly-ui/package.json
@@ -42,7 +42,7 @@
     "react-cookie": "^4.1.1",
     "react-cookiefirst": "^0.1.2",
     "react-dom": "^18.2.0",
-    "react-head": "~3.4.2",
+    "react-head": "^3.4.2",
     "react-markdown": "^8.0.5",
     "react-modal": "^3.15.1",
     "react-player": "^2.13.0",
