feat(assembly-ui): webpack config for beta in dev mode

--- a/apps/assembly-ui/tsconfig.json
+++ b/apps/assembly-ui/tsconfig.json
@@ -21,7 +21,7 @@
       "../../package/utils",
       "../../package/designsystem",
       "../../package/logger",
-      "../../package/tracking"
+      "../../package/tracking",
     ]
   }
   
