--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,9 @@
     "**/resolveTsconfigPathsToAlias.js",
     "**/ecosystem.config.cjs",
     "**/webpack.config.cjs",
-    "**/app.e2e-spec.ts"
+    "**/app.e2e-spec.ts",
   ],
-  "include": ["apps", "package"],
+  "include": ["apps", "package", "apps/assembly-ui/configuration.json"],
   "compilerOptions": {
     "rootDir": ".",
     "baseUrl": "./types/index",
