--- a/package/components/package.json
+++ b/package/components/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-facebook-login": "^4.1.1",
     "react-head": "^3.4.2",
+    "react-markdown": "^8.0.5",
     "react-modal": "^3.15.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
