--- a/apps/widget/Dockerfile
+++ b/apps/widget/Dockerfile
@@ -56,7 +56,6 @@ CMD ["yarn", "workspace", "@make.org/widget", "server:dev"]
 
 EXPOSE 3000
 
-
 ###################
 # BUILD PRODUCTION
 ###################
@@ -73,8 +72,9 @@ RUN ["rm", "-rf", "node_modules"]
 RUN ["yarn", "workspaces", "focus", "@make.org/widget", "--production"]
 
 
-FROM node:18.17-alpine as widget-production
+FROM node:18.17-alpine AS widget-production
 
+ARG PROJECT_VERSION="{}"
 ENV PORT 8000
 
 RUN apk --no-cache add curl
@@ -89,6 +89,8 @@ COPY --from=base-production /usr/app/node_modules ./node_modules
 
 EXPOSE 8000
 
+RUN echo ${PROJECT_VERSION} > "/usr/app/version"
+RUN ["ln", "-sf", "/usr/app/version", "/usr/app/dist/client/version"]
 CMD [ "node_modules/.bin/pm2-runtime", "start", "ecosystem.config.js", "--only", "widget-production" ]
 
 HEALTHCHECK --interval=20s CMD curl --fail http://localhost:8000 || exit 1
