--- a/apps/assembly-ui/package.json
+++ b/apps/assembly-ui/package.json
@@ -107,11 +107,10 @@
   "scripts": {
     "dev": "webpack serve --mode development --progress --color --config ./webpack/dev.config.js",
     "dev:mock": "webpack serve --mode development --node-env mock --progress --color --config ./webpack/dev.config.js",
-    "build": "webpack --mode production --progress --color --config ./webpack/build.config.js && yarn version-build",
+    "build": "webpack --mode production --progress --color --config ./webpack/build.config.js",
     "server": "pm2-runtime start ecosystem.config.js --only app-production",
     "server:dev": "pm2-runtime start ecosystem.config.js --only app-dev",
     "server:test": "pm2-runtime start ecosystem.config.js --only 'api-content-mock,app-test'",
-    "version-build": "../../bin/version-build.js generate -d './dist/client' -p 'assembly-ui'",
     "translation": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js check -d ./i18n -l 'fr'",
     "translation:fix": "yarn run translation --fix",
     "translation:unused-keys": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js list-unused",
